--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.6",
         "@meforma/vue-toaster": "^1.3.0",
         "bootstrap-icons": "^1.11.3",
+        "sweetalert2": "^11.10.6",
         "vee-validate": "^4.12.6",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13"
